--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind Intro</title>
+    <title>Razorpay</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <nav>
-        <ul class="flex justify-between">
-            <li class="mx-4">Home</li>
-            <li>Projects</li>
-            <li>Contact Us</li>
-        </ul>
+    <nav class="bg-deepBlue">
+        <div class="relative w-[1080px] mx-auto flex items-center justify-between">
+            <!-- logo -->
+            <a href="/" class="cursor-pointer py-7 pr-7">
+                <img src="" alt="">
+            </a>
+
+        </div>
     </nav>
-    
 </body>
 </html>
