--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razorpay</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="input.css">
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
@@ -98,21 +99,21 @@
         </div>
     </section>
 
-    <!-- feature section  -->
-    <section class="relative mt-[190px] overflow-hidden">
+    <!-- feature section 1 -->
+    <section class="relative mt-[120px] overflow-hidden">
         <img src="./images/feature-section1-dottedrows.png" alt="" loading="lazy" width="233" 
         height="167" class="absolute -top-[8rem] left-[10rem] inline-block">
         <img src="./images/feature-section1-dottedrows.png" alt="" loading="lazy" width="233" 
         height="167" class="absolute top-[3rem] right-0 inline-block rotate-180">
         <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4">
-            <!-- heading -->
+            <!-- heading and a small div for small dash -->
             <h2 class="text-center font-mullish text-2xl leading-[1.2] font-extrabold">Accept Payments with Razorpay Payment Suite</h2>
             <div class="w-6 h-1 bg-greenLight mx-auto mt-4 mb-6"></div>
 
             <!-- content box -->
-            <div class="w-full min-h-[520px] bg-white flex rounded-md relative p-10 py-12">
+            <div class="w-full min-h-[520px] bg-white flex rounded-md relative p-10 py-12 border">
                 <!-- left- section  -->
-                <div class="flex flex-col justify-between items-center w-full">
+                <div class="flex flex-col justify-between w-full">
                     <h3 class="text-[28px] font-mullish leading-10 font-bold max-w-[500px]">
                         Supercharge your business with the all‑powerful
                         <span class="text-lightBlue">Payment Gateway</span>
@@ -157,10 +158,280 @@
                     </div>
                 </div>
                 <!-- for background image  -->
-                <img src="./images/payment-suite.png" class="absolute max-w-[400px] right-0 bottom-0">
+                <img src="./images/payment-suite.png" class="absolute max-w-[600px] right-0 bottom-0">
+            </div>
+            <div class="w-full grid grid-cols-3 gap-4 mt-10">
+                <!-- BOX1 -->
+                <div class="w-full min-h-[15rem] cursor-pointer relative box">
+                    <img src="./images/payment-link-icon.svg" class="bg-lightBlue absolute right-3 top-3 
+                    w-12 h-12 rounded-full z-[8] transition-all duration-200">
+                    <!-- box shape  -->
+                    <svg
+                        viewBox="0 0 349.32501220703125 225"
+                        xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class="stroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200"
+                        style="stroke-opacity: 0.15"
+                        >
+                        <path
+                                d="m 0 6 
+                            a 6 6 0 0 1 6 -6 
+                            h 250.32501220703125 
+                            a 16 16 0 0 1 11 5 
+                            l 77 77 
+                            a 16 16 0 0 1 5 11 
+                            v 126 
+                            a 6 6 0 0 1 -6 6 
+                            h -337.32501220703125 
+                            a 6 6 0 0 1 -6 -6 
+                            z"
+                                fill="#fff"
+                        ></path>
+                    </svg>
+                    <!-- box-content  -->
+                    <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
+                        <!-- text-part  -->
+                        <div>
+                            <h3 class="font-bold font-mullish text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+                            <p class="font-mullish text-grayText mt-6">Share payment link via an email, SMS, messenger, chatbot etc. 
+                            and get paid immediately</p>
+                        </div>
+                        <!-- hyperlink know more  -->
+                        <div class="flex items-center cursor-pointer group">
+                            <a href="#" class="font-mullish font-bold text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200 ">Know More</a>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- BOX2 -->
+                <div class="w-full min-h-[15rem] cursor-pointer relative box">
+                    <img src="./images/payment-link-icon.svg" class="bg-lightBlue absolute right-3 top-3 
+                    w-12 h-12 rounded-full z-[8] transition-all duration-200">
+                    <!-- box shape  -->
+                    <svg
+                        viewBox="0 0 349.32501220703125 225"
+                        xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class="stroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200"
+                        style="stroke-opacity: 0.15"
+                        >
+                        <path
+                                d="m 0 6 
+                            a 6 6 0 0 1 6 -6 
+                            h 250.32501220703125 
+                            a 16 16 0 0 1 11 5 
+                            l 77 77 
+                            a 16 16 0 0 1 5 11 
+                            v 126 
+                            a 6 6 0 0 1 -6 6 
+                            h -337.32501220703125 
+                            a 6 6 0 0 1 -6 -6 
+                            z"
+                                fill="#fff"
+                        ></path>
+                    </svg>
+                    <!-- box-content  -->
+                    <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
+                        <!-- text-part  -->
+                        <div>
+                            <h3 class="font-bold font-mullish text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+                            <p class="font-mullish text-grayText mt-6">Share payment link via an email, SMS, messenger, chatbot etc. 
+                            and get paid immediately</p>
+                        </div>
+                        <!-- hyperlink know more  -->
+                        <div class="flex items-center cursor-pointer group">
+                            <a href="#" class="font-mullish font-bold text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200 ">Know More</a>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- BOX3 -->
+                <div class="w-full min-h-[15rem] cursor-pointer relative box">
+                    <img src="./images/payment-link-icon.svg" class="bg-lightBlue absolute right-3 top-3 
+                    w-12 h-12 rounded-full z-[8] transition-all duration-200">
+                    <!-- box shape  -->
+                    <svg
+                        viewBox="0 0 349.32501220703125 225"
+                        xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class="stroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200"
+                        style="stroke-opacity: 0.15"
+                        >
+                        <path
+                                d="m 0 6 
+                            a 6 6 0 0 1 6 -6 
+                            h 250.32501220703125 
+                            a 16 16 0 0 1 11 5 
+                            l 77 77 
+                            a 16 16 0 0 1 5 11 
+                            v 126 
+                            a 6 6 0 0 1 -6 6 
+                            h -337.32501220703125 
+                            a 6 6 0 0 1 -6 -6 
+                            z"
+                                fill="#fff"
+                        ></path>
+                    </svg>
+                    <!-- box-content  -->
+                    <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
+                        <!-- text-part  -->
+                        <div>
+                            <h3 class="font-bold font-mullish text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+                            <p class="font-mullish text-grayText mt-6">Share payment link via an email, SMS, messenger, chatbot etc. 
+                            and get paid immediately</p>
+                        </div>
+                        <!-- hyperlink know more  -->
+                        <div class="flex items-center cursor-pointer group">
+                            <a href="#" class="font-mullish font-bold text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200 ">Know More</a>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- BOX4 -->
+                <div class="w-full min-h-[15rem] cursor-pointer relative box">
+                    <img src="./images/payment-link-icon.svg" class="bg-lightBlue absolute right-3 top-3 
+                    w-12 h-12 rounded-full z-[8] transition-all duration-200">
+                    <!-- box shape  -->
+                    <svg
+                        viewBox="0 0 349.32501220703125 225"
+                        xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class="stroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200"
+                        style="stroke-opacity: 0.15"
+                        >
+                        <path
+                                d="m 0 6 
+                            a 6 6 0 0 1 6 -6 
+                            h 250.32501220703125 
+                            a 16 16 0 0 1 11 5 
+                            l 77 77 
+                            a 16 16 0 0 1 5 11 
+                            v 126 
+                            a 6 6 0 0 1 -6 6 
+                            h -337.32501220703125 
+                            a 6 6 0 0 1 -6 -6 
+                            z"
+                                fill="#fff"
+                        ></path>
+                    </svg>
+                    <!-- box-content  -->
+                    <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
+                        <!-- text-part  -->
+                        <div>
+                            <h3 class="font-bold font-mullish text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+                            <p class="font-mullish text-grayText mt-6">Share payment link via an email, SMS, messenger, chatbot etc. 
+                            and get paid immediately</p>
+                        </div>
+                        <!-- hyperlink know more  -->
+                        <div class="flex items-center cursor-pointer group">
+                            <a href="#" class="font-mullish font-bold text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200 ">Know More</a>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- BOX5 -->
+                <div class="w-full min-h-[15rem] cursor-pointer relative box">
+                    <img src="./images/payment-link-icon.svg" class="bg-lightBlue absolute right-3 top-3 
+                    w-12 h-12 rounded-full z-[8] transition-all duration-200">
+                    <!-- box shape  -->
+                    <svg
+                        viewBox="0 0 349.32501220703125 225"
+                        xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class="stroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200"
+                        style="stroke-opacity: 0.15"
+                        >
+                        <path
+                                d="m 0 6 
+                            a 6 6 0 0 1 6 -6 
+                            h 250.32501220703125 
+                            a 16 16 0 0 1 11 5 
+                            l 77 77 
+                            a 16 16 0 0 1 5 11 
+                            v 126 
+                            a 6 6 0 0 1 -6 6 
+                            h -337.32501220703125 
+                            a 6 6 0 0 1 -6 -6 
+                            z"
+                                fill="#fff"
+                        ></path>
+                    </svg>
+                    <!-- box-content  -->
+                    <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
+                        <!-- text-part  -->
+                        <div>
+                            <h3 class="font-bold font-mullish text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+                            <p class="font-mullish text-grayText mt-6">Share payment link via an email, SMS, messenger, chatbot etc. 
+                            and get paid immediately</p>
+                        </div>
+                        <!-- hyperlink know more  -->
+                        <div class="flex items-center cursor-pointer group">
+                            <a href="#" class="font-mullish font-bold text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200 ">Know More</a>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- BOX6 -->
+                <div class="w-full min-h-[15rem] cursor-pointer relative box">
+                    <img src="./images/payment-link-icon.svg" class="bg-lightBlue absolute right-3 top-3 
+                    w-12 h-12 rounded-full z-[8] transition-all duration-200">
+                    <!-- box shape  -->
+                    <svg
+                        viewBox="0 0 349.32501220703125 225"
+                        xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class="stroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200"
+                        style="stroke-opacity: 0.15"
+                        >
+                        <path
+                                d="m 0 6 
+                            a 6 6 0 0 1 6 -6 
+                            h 250.32501220703125 
+                            a 16 16 0 0 1 11 5 
+                            l 77 77 
+                            a 16 16 0 0 1 5 11 
+                            v 126 
+                            a 6 6 0 0 1 -6 6 
+                            h -337.32501220703125 
+                            a 6 6 0 0 1 -6 -6 
+                            z"
+                                fill="#fff"
+                        ></path>
+                    </svg>
+                    <!-- box-content  -->
+                    <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
+                        <!-- text-part  -->
+                        <div>
+                            <h3 class="font-bold font-mullish text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+                            <p class="font-mullish text-grayText mt-6">Share payment link via an email, SMS, messenger, chatbot etc. 
+                            and get paid immediately</p>
+                        </div>
+                        <!-- hyperlink know more  -->
+                        <div class="flex items-center cursor-pointer group">
+                            <a href="#" class="font-mullish font-bold text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200 ">Know More</a>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+                            group-hover:text-grayBlue transition-all duration-200"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        
     </section>
+
+    <!-- feature section 2  -->
+    
 
     <script>
         feather.replace()
